# greenhouse_backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_ERROR_IMPROVEMENTS.md  compose.yaml  justfile  release.toml
.cargo/: config.toml
.github/workflows/: buildjob.yml  (+3 more)
api/web/: Cargo.toml  Dockerfile
api/web/config/: .env.example
api/web/src/: app.rs  lib.rs  main.rs
api/web/src/alert/: error.rs  router.rs  service.rs
api/web/src/auth/: error.rs  middleware.rs  mod.rs  router.rs  service.rs
api/web/src/device/: error.rs  mod.rs  router.rs  service.rs
api/web/src/diary/: error.rs  mod.rs  router.rs  service.rs
api/web/src/helper/: error.rs  mod.rs
api/web/src/push/: mod.rs  router.rs  service.rs
api/web/src/settings/: error.rs  router.rs  service.rs
api/web/src/test/: error.rs  router.rs  service.rs
api/web/src/test/mod.rs/: router.rs
api/web/tests/: main.rs
api/web/tests/diary/: mod.rs  router_tests.rs  service_tests.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/smart_device_dto/: config.rs  endpoints.rs  mod.rs  read.rs  status.rs  write.rs
core/src/smart_device_interface/: config.rs  device_service.rs  handler.rs  hybrid_device.rs  input_device.rs  mod.rs  output_device.rs
docs/: ERROR_HANDLING.md
examples/: Cargo.toml  Dockerfile  README.md  input_alert_trigger.rs  input_output_int_saver.rs  periodic_alert.rs
examples/hybrid_device/: Cargo.toml  Dockerfile
examples/hybrid_device/src/: main.rs
greenhouse_core/: Cargo.toml
greenhouse_core/src/: error.rs  http_error.rs  lib.rs
greenhouse_core/src/auth_service_dto/: endpoints.rs  generate_one_time_token.rs  login.rs  mod.rs  register.rs  register_admin.rs  token.rs  user_preferences.rs  user_token.rs
greenhouse_core/src/data_storage_interface/diary_dtos/: get_diary.rs  mod.rs  put_diary_entry.rs
greenhouse_core/src/data_storage_service_dto/: mod.rs
greenhouse_core/src/data_storage_service_dto/alert_dto/: alert.rs  endpoints.rs  get_aggrigated_alert.rs  get_alert.rs  mod.rs  post_create_alert.rs  query.rs
greenhouse_core/src/data_storage_service_dto/diary_dtos/: endpoints.rs  get_diary.rs  get_diary_entry.rs  post_diary_entry.rs  put_diary_entry.rs
greenhouse_core/src/device_service_dto/: endpoints.rs  get_device.rs  get_timeseries.rs  mod.rs  operations.rs  post_device.rs  put_device.rs  query.rs
greenhouse_core/src/notification_service_dto/: endpoints.rs  mod.rs  push.rs
greenhouse_core/src/scripting_dto/: check_token.rs  endpoints.rs  get_token.rs  mod.rs
greenhouse_core/src/scripting_service_dto/: endpoints.rs  mod.rs  token.rs
greenhouse_core/src/smart_device_dto/: activation.rs  config.rs  endpoints.rs  mod.rs  read.rs  status.rs  write.rs
greenhouse_core/src/smart_device_interface/: config.rs  device_builder.rs  device_service.rs  error.rs  handler.rs  hybrid_device.rs  input_device.rs  mod.rs  op_result.rs  output_device.rs
greenhouse_macro/: Cargo.toml
integration-tests/: Cargo.toml  IMPLEMENTED_TESTS.md
integration-tests/tests/: api-auth-integration.rs  api-data-alert-integration.rs  api-data-diary-integration.rs  api-device-integration.rs  test_helper.rs
scripts/: build-image-layer.sh  generate_data.rs  services.config
services/area_service/: Cargo.toml
services/area_service/src/: main.rs
services/auth_service/: .env  .env.example  Cargo.toml  Dockerfile
services/auth_service/config/: .env.example
services/auth_service/migrations/2024-06-30-195736_create_user/: up.sql
services/auth_service/migrations/2024-07-01-174059_use_hash_instead_of_pw_salt/: down.sql  up.sql
services/auth_service/migrations/2024-07-31-203148_make_username_unique/: down.sql  up.sql
services/auth_service/migrations/2025-09-29-193518_add_user_preferences/: down.sql  up.sql
services/auth_service/src/: app.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  user_token.rs
services/auth_service/src/database/: error.rs  models.rs  schema.rs
services/auth_service/src/router/: auth_router.rs  error.rs  mod.rs
services/auth_service/src/token/: error.rs  mod.rs
services/auth_service/src/user_token/: error.rs  mod.rs
services/circumference_service/: Cargo.toml
services/circumference_service/src/: main.rs
services/data_storage_service/: Cargo.toml  Dockerfile
services/data_storage_service/config/: .env.example
services/data_storage_service/migrations/2024-09-06-110647_createDiaryEntry/: down.sql  up.sql
services/data_storage_service/migrations/2024-09-22-103543_Alerts/: down.sql  up.sql
services/data_storage_service/migrations/2025-03-01-144340_diary_entry_alerts/: down.sql  up.sql
services/data_storage_service/src/: app.rs  error.rs  lib.rs  main.rs
services/data_storage_service/src/database/: aggrigated_alert.rs  alert_models.rs  diary_models.rs  error.rs  mod.rs  models.rs  schema.rs  severity_models.rs
services/data_storage_service/src/router/: alert_router.rs  diary_entry_router.rs  error.rs  mod.rs
services/data_storage_service/tests/: main.rs
services/data_storage_service/tests/router/: diary_entry_router_tests.rs  mod.rs
services/device_service/: Cargo.toml  Dockerfile
services/device_service/config/: .env.example
services/device_service/migrations/2025-06-03-202314_create_device/: up.sql
services/device_service/migrations/2025-09-18-171603_add_scraping_flag/: down.sql  up.sql
services/device_service/src/: lib.rs  main.rs
services/device_service/src/database/: device.rs  error.rs  mod.rs  schema.rs
services/device_service/src/router/: device_router.rs  error.rs  mod.rs  prom_service.rs  service.rs
services/device_service/src/scrape_service/: error.rs  mod.rs
services/scripting_service/: Cargo.toml  Dockerfile
services/scripting_service/config/: .env.example
services/scripting_service/migrations/2025-08-05-195808_create_scripting_device/: down.sql  up.sql
services/scripting_service/src/: lib.rs  main.rs
services/scripting_service/src/database/: mod.rs  schema.rs  scripting.rs
services/scripting_service/src/router/: error.rs  mod.rs  scripting_router.rs
shared/: Cargo.toml
(+38 files in other folders)
