[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
derive_more = { workspace = true }
axum = { workspace = true, optional = true}
serde_json ={ workspace = true}

[features]
default = ["api_web_dto", "api_script_dto", "service_dto", "smart_device_dto", "smart_device_interface"]
api_web_dto = []
api_script_dto = []
service_dto = []
smart_device_dto = []
smart_device_interface = ["smart_device_dto", "dep:axum"]

[dev-dependencies]
httpc-test = "0.1.9"