[package]
name = "examples"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
derive_more = {version = "2.0.1", features = ["full"] }
greenhouse_core = { path = "../greenhouse_core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "input_output_int_saver"
path = "input_output_int_saver.rs"
[[example]]
name = "input_alert_trigger"
path = "input_alert_trigger.rs"