[package]
name = "examples"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
derive_more = {version = "2.0.1", features = ["full"] }
greenhouse_core = { path = "../greenhouse_core", features = ["smart_device_interface_axum", "data_storage_service_dto"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "input_output_int_saver"
path = "input_output_int_saver.rs"
[[example]]
name = "input_alert_trigger"
path = "input_alert_trigger.rs"
[[example]]
name = "periodic_alert"
path = "periodic_alert.rs"