[package]
name = "greenhouse_core"
version = "0.0.7"
edition = "2021"
description = "greenhouse_core"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json ={ workspace = true }

[features]
default = ["api_web_dto", "api_script_dto", "auth_service_dto", "smart_device_dto", "smart_device_interface", "data_storage_interface"]
api_web_dto = []
api_script_dto = []
auth_service_dto = []
smart_device_dto = []
smart_device_interface = ["smart_device_dto", "dep:axum"]
data_storage_interface = []

[dev-dependencies]
httpc-test = "0.1.9"
