[package]
name = "greenhouse_core"
version = "0.0.8"
edition = "2024"
description = "greenhouse_core"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json ={ workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde"
] }

[features]
default = ["api_web_dto", "api_script_dto", "auth_service_dto", "smart_device_dto", "smart_device_interface", "data_storage_service_dto"]
api_web_dto = []
api_script_dto = []
auth_service_dto = []
smart_device_dto = []
smart_device_interface = ["smart_device_dto", "dep:axum"]
data_storage_service_dto = []

[dev-dependencies]
httpc-test = "0.1.9"
