[package]
name = "greenhouse_core"
version = "0.0.9"
edition = "2024"
description = "greenhouse_core"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true }
derive_more = { workspace = true }
reqwest = { workspace = true, features = ["json"]}
serde = { workspace = true }
serde_json ={ workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde"
] }
tracing = { workspace = true, optional = true }
futures = { workspace = true }

[features]
default = [
    "api_web_dto",
    "api_script_dto",
    "auth_service_dto",
    "smart_device_dto",
    # Keep the generic smart_device_interface available by default (no Axum)
    "smart_device_interface",
    "data_storage_service_dto",
    "device_service_dto",
    # Do NOT enable error_handling by default (pulls in Axum)
    # "error_handling",
    "scripting_service_dto",
]
api_web_dto = []
api_script_dto = []
auth_service_dto = []
smart_device_dto = []
# Generic smart device interface (no Axum dependency)
smart_device_interface = ["smart_device_dto"]
# Axum adapter for the smart device interface
smart_device_interface_axum = ["smart_device_interface", "dep:axum", "dep:tracing"]
data_storage_service_dto = []
device_service_dto =[]
error_handling = ["dep:axum", "dep:tracing"]
scripting_service_dto = []

[dev-dependencies]
httpc-test = "0.1.9"
