[package]
name = "web_api"
version = "0.0.1"
edition = "2021"
description = "web_api"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["tracing"]}
reqwest = { workspace = true, features = ["json"]}
tokio = { workspace = true }
greenhouse_core = { workspace = true, features = ["auth_service_dto"] }
derive_more = { workspace = true }
serde = { workspace = true }
serde_yaml ={ workspace = true }
tower-cookies = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
sentry = { workspace = true, features = ["debug-images", "tower"] }