[package]
name = "example-hybrid-device"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
derive_more = "1.0.0"
greenhouse_core = { path = "../../greenhouse_core" }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
