[package]
name = "area_service"
version = "0.0.1"
edition = "2021"
description= "area service"
license="GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
derive_more = { workspace = true }
tokio = { workspace = true }
greenhouse_core = { workspace = true, features = ["service_dto"] }
