[package]
name = "area_service"
version = "0.0.1"
edition = "2021"
description= "area service"
license="GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
derive_more = { workspace = true }
tokio = { workspace = true }
serde_yaml = { workspace = true }
greenhouse_core = { workspace = true, features = ["auth_service_dto"] }
bb8 = { workspace = true }
serde = { workspace = true }
serde_json ={ workspace = true}
diesel =  { workspace = true }
diesel-async =  { workspace = true }
