[package]
name = "auth_service"
version = "0.0.1"
edition = "2021"
description = "area service"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
bb8 = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
diesel =  { workspace = true, features = [ "uuid" ] }
diesel-async =  { workspace = true }
greenhouse_core = { workspace = true, features = ["auth_service_dto"] }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json ={ workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde"
] }
