[package]
name = "circumference_service"
version = "0.0.1"
edition = "2021"
description= "circumference service"
license="gnu GPLv3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { workspace = true }
derive_more = { workspace = true }
tokio = { workspace = true }
core = { workspace = true}
