[package]
name = "device_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["tracing"]}
bb8 = { workspace = true }
diesel =  { workspace = true, features = [ "uuid", "postgres" ] }
diesel-async =  { workspace = true }
greenhouse_core = { workspace = true, features = ["auth_service_dto", "error_handling"] }
serde = { workspace = true }
serde_json ={ workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
diesel_migrations = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.17", default-features = false }
tower-http = { workspace = true, features = ["trace"] }
sentry = { workspace = true, features = ["debug-images", "tower"] }
uuid = { workspace = true, features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde"
] }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
reqwest = { workspace = true, features = ["json"]}
